# my

./: makefile
algs/: gcd.hs  jpd.hs  modexp.hs
algs/graph/: ffi.hs  jpd.hs  makefile
cabal/: LICENSE  my.cabal
cabal/My/: Ftp.hs  Rand.hs  Show.hs  Utf8.hs  Xml.hs
cabal/tests/: makefile
demon/: Demon.hs  demon.hs  makefile
ftp/: jpd.hs  makefile
glob/: Glob.hs  jpd.hs  makefile
hdbm/: Hdbm.hs  hdbm.c  hdbm.h  jpd.hs  makefile  tdbm.c
hsdb/: Hdb.hs  Hdb2.hs  hdb.hs  hdb2.hs  jdb.c  jpd.c  makefile
html/: Cgi.hs  Html.hs  Html0.hs  celsius.hs  color.hs  form.hs  genx.hs  html.hs  html2.hs  jpd.hs  jpd2.hs  makefile  mkthumb.hs
html2/: Html.hs  genx.hs  genx2.hs  html.hs  makefile
http/: http.c  http.hs  makefile
log/: Log.hs  log.hs  makefile
net/: Demon.hs  Net.hs  demon.hs  http.hs  makefile  netc.hs  nets.hs  p2.hs
parse/: Parse.hs  jpd.hs  lex.hs  makefile  parsec.hs  passwd.hs
rand/: Rand.hs  makefile  rand.hs
show/: jpd.hs
sql/: Sql.hs  jpd.hs  makefile
stat/: Normal.hs  Stat.hs  jpd.hs  makefile  preg.hs
svg/: Svg.hs  jpd.hs  makefile  poly.hs
time/: Time.hs  time.hs
utf8/: Utf8.hs  utf8.hs
xml/: Xml.hs  xml.hs
